--- a/Docs/Верхнеуровневые требования к проекту.md
+++ b/Docs/Верхнеуровневые требования к проекту.md
@@ -8,59 +8,59 @@ Telegram на основе геометок и временных показат
 
 1.  Сбор и анализ данных о местоположении пользователя
 
--   Система должна автоматически собирать и анализировать данные о
-    местоположении пользователя для определения наиболее релевантной
-    рекламы.
+	1.1. Автоматический сбор данных о местоположении. 
+	1.2. Анализ местоположения для определения релевантной рекламы. 
+ 
 
 2.  Управление рекламными кампаниямич
-
--   Разработать интерфейс для создания, настройки и управления
-    рекламными кампаниями, включая выбор целевой аудитории, бюджета и
-    графика показов.
+ 
+	2.1. Разработка интерфейса для создания кампаний. 
+	2.2. Настройка кампаний
+		* Определение целевой аудитории
+		* Расчёт бюджета
+		* Планирование графика показов 
 
 3.  Таргетирование на основе времени
 
--   Возможность настройки показа рекламы в определенное время или
-    временные промежутки, чтобы увеличить эффективность рекламных
-    кампаний.
+	3.1. Настройка времени показа рекламы. 
+	3.2. Управление временными промежутками для показа рекламы. 
 
 4.  Интеграция с Telegram
 
--   Обеспечить стабильную и безопасную интеграцию с API Telegram для
-    показа таргетированной рекламы пользователям.
+	4.1. Реализация стабильной интеграции с API Telegram. 
+	4.2. Обеспечение безопасности интеграции и данных пользователей. 
 
 5.  Отчетность и аналитика
 
--   Реализовать функционал для сбора и анализа данных о результатах
-    рекламных кампаний, включая показатели вовлеченности и конверсии.
+	5.1. Сбор данных о результатах кампаний. 
+	5.2. Анализ показателей вовлеченности и конверсии. 
 
 Нефункциональные требования
 
 1.  Безопасность
 
--   Гарантировать защиту данных пользователей и соответствие всем
-    требованиям конфиденциальности и безопасности.
+	1.1. Защита данных пользователей. 
+	1.2. Соответствие требованиям конфиденциальности и безопасности. 
 
 2.  Масштабируемость
 
--   Система должна быть способна масштабироваться для обработки
-    увеличивающегося объема данных и пользователей без потери
-    производительности.
+	2.1. Возможность обработки больших объемов данных. 
+	2.2. Поддержка увеличения числа пользователей без снижения производительности. 
 
 3.  Удобство использования
 
--   Интерфейс системы должен быть интуитивно понятным и удобным для
-    различных категорий пользователей.
+	3.1. Интуитивно понятный интерфейс. 
+	3.2. Доступность для различных категорий пользователей. 
 
 4.  Надежность
 
--   Обеспечение высокой доступности и надежности системы, минимизация
-    времени простоев и ошибок.
+	4.1. Высокая доступность системы. 
+	4.2. Минимизация времени простоев и ошибок.
 
 5.  Совместимость
 
--   Система должна быть совместима с различными устройствами и
-    операционными системами пользователей.
+	5.1. Поддержка различных устройств и ОС. 
+	5.2. Обеспечение стабильной работы на всех поддерживаемых платформах.
 
 Верхнеуровневые требования к проекту «Геотаргет» задают направление для
 детального планирования и разработки системы. Они помогут обеспечить,
