Update Верхнеуровневые требования к проекту.md

--- a/Docs/Верхнеуровневые требования к проекту.md
+++ b/Docs/Верхнеуровневые требования к проекту.md
@@ -19,11 +19,11 @@ Telegram на основе геометок и временных показат
 
 	2.2. Настройка кампаний
 
-		* Определение целевой аудитории
+  	  + Определение целевой аудитории
 
-		* Расчёт бюджета
+	  + Расчёт бюджета
 
-		* Планирование графика показов 
+	  + Планирование графика показов 
 
 3.  Таргетирование на основе времени
 
