--- a/Docs/Правила работы в команде проекта.md
+++ b/Docs/Правила работы в команде проекта.md
@@ -61,16 +61,16 @@
 
 -   Правила оформления пул реквестов
 
--   Название пул реквеста должно четко отражать сделанные изменения.
-
--   Описание пул реквеста должно содержать информацию о проблеме,
-    которую решают внесенные изменения, а также описание решения.
-
--   В случае, если пул реквест связан с конкретным issue, необходимо
-    указать его номер.
-
--   Перед созданием пул реквеста необходимо убедиться, что ветка
-    актуализирована относительно основной ветки разработки.
+    -   Название пул реквеста должно четко отражать сделанные изменения.
+    
+    -   Описание пул реквеста должно содержать информацию о проблеме,
+        которую решают внесенные изменения, а также описание решения.
+    
+    -   В случае, если пул реквест связан с конкретным issue, необходимо
+        указать его номер.
+    
+    -   Перед созданием пул реквеста необходимо убедиться, что ветка
+        актуализирована относительно основной ветки разработки.
 
 Стандарты написания кода
 
@@ -94,6 +94,31 @@
     текущему состоянию проекта.
 
 -   Документация должна быть доступна и понятна всем членам команды.
+
+Структура проекта:
+
+- **develop** является основной веткой для разработки, где происходит интеграция всех новых фич, улучшений и багфиксов. Эта ветка служит основой для будущих релизов.
+- **release** ветка используется для подготовки к следующему релизу. В нее сливаются изменения из **develop** для финальных тестов перед запуском в продакшн.
+- **production** отражает текущее состояние кода в продакшне. Изменения сюда попадают из **release** ветки после того, как были успешно протестированы и готовы к запуску.
+
+Создание и именование веток:
+
+- Для новых фич **(feature/*)**: создается от **develop** и сливается обратно в **develop** после завершения работы. Используются названия, отражающие суть изменений, например, **feature/new-login-system**.
+- Для релизов: когда **develop** достигает точки, где все планируемые на релиз фичи интегрированы и протестированы, создается **release** ветка (например, **release/v1.2.0)**. Эта ветка служит промежуточным этапом для финализации релиза, позволяя делать минорные исправления и подготовку. После завершения подготовки, **release** сливается в **production** и обратно в **develop**.
+- Для багфиксов (**bugfix/* или hotfix/***): создается от **production** если это критический багфикс **(hotfix/*)**, который требует немедленного внедрения в продакшн, или от **develop** для обычных багфиксов **(bugfix/*)**. После исправления, **hotfix** сливается в **production** и обратно в **develop** и **release** (если актуально).
+
+Код-ревью и подтверждение пулл-реквестов
+
+- Все изменения, предложенные через пулл-реквесты в **develop** или **release**, должны проходить код-ревью.
+- Ревьюер должен проверять соответствие кода стандартам проекта, его читаемость, функциональность и отсутствие регрессий.
+- После успешного код-ревью и тестирования, пулл-реквест может быть одобрен и слиян.
+- Особое внимание уделяется изменениям, идущим в **release** и **production**, поскольку они непосредственно влияют на качество продукта у конечных пользователей.
+
+Процессы для различных типов изменений
+
+- Запрос на изменение (новый функционал, **feature**): Инициируется созданием **feature/*** ветки от **develop**, ревью и тестами перед слиянием обратно в **develop**.
+- Релиз **(release)**: Подготовка начинается с создания **release** ветки от **develop**, включает тестирование, багфиксинг и подготовку метаданных релиза, завершается слиянием в production и обратным слиянием в **develop**.
+- Багфикс (**bugfix/* или hotfix/***): Непосредственное реагирование на обнаруженные проблемы, с последующим слиянием в **production** (и **develop**/**release** при необходимости) после исправления.
 
 Важно, чтобы каждый член команды четко понимал свои обязанности и
 следовал установленным процедурам, что способствует созданию эффективной
