Update Правила работы в команде проекта.md

--- a/Docs/Правила работы в команде проекта.md
+++ b/Docs/Правила работы в команде проекта.md
@@ -41,7 +41,7 @@
 -   Важная информация о проекте должна отражать структуру ветвления и
     быть организованной по веткам, соответственно, документация в
     **develope** содержит информацию о последних изменениях, в
-    **release** --- о предстоящем релизе, а в **production** --- о
+    **release** --- о предстоящем релизе, а в **master** --- о
     текущем состоянии продукта в эксплуатации.
 
 Организация код-ревью
@@ -99,26 +99,26 @@
 
 - **develop** является основной веткой для разработки, где происходит интеграция всех новых фич, улучшений и багфиксов. Эта ветка служит основой для будущих релизов.
 - **release** ветка используется для подготовки к следующему релизу. В нее сливаются изменения из **develop** для финальных тестов перед запуском в продакшн.
-- **production** отражает текущее состояние кода в продакшне. Изменения сюда попадают из **release** ветки после того, как были успешно протестированы и готовы к запуску.
+- **master** отражает текущее состояние кода в продакшне. Изменения сюда попадают из **release** ветки после того, как были успешно протестированы и готовы к запуску.
 
 Создание и именование веток:
 
 - Для новых фич **(feature/*)**: создается от **develop** и сливается обратно в **develop** после завершения работы. Используются названия, отражающие суть изменений, например, **feature/new-login-system**.
-- Для релизов: когда **develop** достигает точки, где все планируемые на релиз фичи интегрированы и протестированы, создается **release** ветка (например, **release/v1.2.0)**. Эта ветка служит промежуточным этапом для финализации релиза, позволяя делать минорные исправления и подготовку. После завершения подготовки, **release** сливается в **production** и обратно в **develop**.
-- Для багфиксов (**bugfix/* или hotfix/***): создается от **production** если это критический багфикс **(hotfix/*)**, который требует немедленного внедрения в продакшн, или от **develop** для обычных багфиксов **(bugfix/*)**. После исправления, **hotfix** сливается в **production** и обратно в **develop** и **release** (если актуально).
+- Для релизов: когда **develop** достигает точки, где все планируемые на релиз фичи интегрированы и протестированы, создается **release** ветка (например, **release/v1.2.0)**. Эта ветка служит промежуточным этапом для финализации релиза, позволяя делать минорные исправления и подготовку. После завершения подготовки, **release** сливается в **master** и обратно в **develop**.
+- Для багфиксов (**bugfix/* или hotfix/***): создается от **master** если это критический багфикс **(hotfix/*)**, который требует немедленного внедрения в продакшн, или от **develop** для обычных багфиксов **(bugfix/*)**. После исправления, **hotfix** сливается в **master** и обратно в **develop** и **release** (если актуально).
 
 Код-ревью и подтверждение пулл-реквестов
 
 - Все изменения, предложенные через пулл-реквесты в **develop** или **release**, должны проходить код-ревью.
 - Ревьюер должен проверять соответствие кода стандартам проекта, его читаемость, функциональность и отсутствие регрессий.
 - После успешного код-ревью и тестирования, пулл-реквест может быть одобрен и слиян.
-- Особое внимание уделяется изменениям, идущим в **release** и **production**, поскольку они непосредственно влияют на качество продукта у конечных пользователей.
+- Особое внимание уделяется изменениям, идущим в **release** и **master**, поскольку они непосредственно влияют на качество продукта у конечных пользователей.
 
 Процессы для различных типов изменений
 
 - Запрос на изменение (новый функционал, **feature**): Инициируется созданием **feature/*** ветки от **develop**, ревью и тестами перед слиянием обратно в **develop**.
-- Релиз **(release)**: Подготовка начинается с создания **release** ветки от **develop**, включает тестирование, багфиксинг и подготовку метаданных релиза, завершается слиянием в production и обратным слиянием в **develop**.
-- Багфикс (**bugfix/* или hotfix/***): Непосредственное реагирование на обнаруженные проблемы, с последующим слиянием в **production** (и **develop**/**release** при необходимости) после исправления.
+- Релиз **(release)**: Подготовка начинается с создания **release** ветки от **develop**, включает тестирование, багфиксинг и подготовку метаданных релиза, завершается слиянием в **master** и обратным слиянием в **develop**.
+- Багфикс (**bugfix/* или hotfix/***): Непосредственное реагирование на обнаруженные проблемы, с последующим слиянием в **master** (и **develop**/**release** при необходимости) после исправления.
 
 Важно, чтобы каждый член команды четко понимал свои обязанности и
 следовал установленным процедурам, что способствует созданию эффективной
